2010-04-23  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Adding #callToDLV and #ASFromDLV information.
	* testsuite/TestMLPSolver.cpp: Likewise.

2010-04-22  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/Module.cpp: Introducing at most instead of exactly for parameters + formal input more than one predicate.

	* include/dlvhex/MLPSolver.hpp: Including time information in STATS.

	* include/dlvhex/RuleTable.hpp: To not insert previously existed rule.

2010-04-20  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Put data structure for A in a separate file.
	* include/dlvhex/IDSetContainer.hpp: Likewise.

2010-04-18  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* include/dlvhex/MLPSolver.hpp: Fixed stats printing information.

2010-04-16  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Optimize instantiation information: store it on ogatoms, delete MFlag.
	* include/dlvhex/OrdinaryAtomTable.hpp: Likewise.
	* include/dlvhex/Atoms.hpp: Likewise.
	* include/dlvhex/ID.hpp: Likewise.
	* include/dlvhex/Module.hpp: Likewise.
	* include/dlvhex/Table.hpp: Likewise.

2010-04-15  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Atoms.hpp: Store actual module name on the module atom.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Store the same rule only once.

	* include/dlvhex/RuleTable.hpp: Adding hashed index to the RuleTable.

2010-04-13  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/gen.sh: Adding diamond and random topology.
	* generator/Module.cpp: Likewise.
	* generator/makefile: Likewise.

	* include/dlvhex/MLPSolver.hpp: Use registry for solve() rather than ctx.

	* include/dlvhex/Logger.hpp: Printing additional statistical information.
	* include/dlvhex/MLPSolver.hpp: Likewise.